[package]
name = "graphity"
version = "0.0.1"
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
categories = ["no-std"]
license = "GPL-3.0-or-later"
description = "Graph iterators."
repository = "https://github.com/zlosynth/graphity"
documentation = "https://docs.rs/graphity"
readme = "README.md"

[dev-dependencies]
graphity = { path = "." }
