[package]
name = "graphity"
version = "1.0.0"
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2018"
categories = ["no-std", "data-structures"]
tags = ["graph", "data-structure", "flow"]
license = "GPL-3.0-or-later"
description = "Model signal flow between nodes within a directed graph."
repository = "https://github.com/zlosynth/graphity"
documentation = "https://docs.rs/graphity"
readme = "README.md"

[dependencies]
hashbrown = "0.9"

[dev-dependencies]
graphity = { path = "." }
